--- a/projects/hover/index.html
+++ b/projects/hover/index.html
@@ -15,97 +15,97 @@
     color: #fff;
     font-family: 'glass_tty_vt220medium';
     overflow: hidden;
+    font-size: 1.2em;
   }
-  button {padding: 12px;
+  button {font-size: 1em; padding: 12px;
     outline: none; border:0; background: transparent; color: #fff; cursor: pointer !important;
     font-family: 'glass_tty_vt220medium';}
     #spd {color:#fff; padding: 12px;
-      font-size: 2em; position: absolute; top: 0; right:0; padding: 12px;}
+       position: absolute; top: 0; right:0; padding: 12px;}
       .on, button:hover {color: red !important; opacity: 1;}
-      #accl, #cambut {position: absolute; bottom: 0; right:0; opacity: 0.5; font-size: 1em;}
+      /*#startgame {font-size: 1.2em;}*/
+      #accl, #cambut {position: absolute; bottom: 0; right:0; opacity: 0.5; }
       #cambut {right: auto; left: 0;}
       #cambut span {text-decoration: underline;}
-      .msgdiv {display: block; position: absolute; top: 80px; padding: 1em;}
-      #botmsg {font-size: 1.2em;  font-family: 'glass_tty_vt220medium'; line-height: 1.6em;}
+      #msgdiv {display: block; position: absolute; top: 80px; padding: 1em;}
+      #botmsg {font-family: 'glass_tty_vt220medium'; line-height: 1.6em;}
       #menuscreen {margin: 0; position: absolute;
         width: 100%;}
-      #menuscreen ul {margin: 0; padding: 0;}
-      #menuscreen li {list-style: none; line-height: 1.2em;}
-      #menuscreen li:before {content: '.';}
-      #menuscreen li span {color: red;}
-      button {font-size: 1em; cursor: pointer;}
-      #nav {display: block; margin: 1em 5px; }
-      #botmsg.story  {font-size: 1.2em; line-height: 1.4em; text-align: left;}
-    </style>
-  </head>
-  <body>
+        #menuscreen ul {margin: 0; padding: 0;}
+        #menuscreen li {list-style: none; line-height: 1.2em;}
+        #menuscreen li:before {content: '.';}
+        #menuscreen li span {color: red;}
+        button {cursor: pointer;}
+        #nav {display: block; margin: 5px;}
+      
+      </style>
+    </head>
+    <body>
+      <button id="startgame" onclick="gamestart()">[start game]</button>
 
-<!-- <button id="startgame" onclick="gamestart()">start game]</button>  -->
-<button id="startgame" onclick="gamestart()">[start game]</button>
+      <div id="menuscreen">
+        <span id="nav">
+          <button onclick="mgoal()" id="bgoal">goal</button> | <button onclick="controlkeys()" id="bcontrol">controls</button> | <button onclick="showstory()" id="bstory">story</button>
+        </span>
 
-<div id="menuscreen">
-<span id="nav">
-<button onclick="mgoal()">goal</button> | <button onclick="controlkeys()">controls</button> | <button onclick="showstory()">story</button>
-</span>
-
-<!--  -->
-<!-- your cargo is a box of reality bending sticks and must escape this planet and warp -->
-
-<ul id="mkeys" style="display: none;">
-  <li><span>mouse</span> : hover to control</li>
-  <li><span>up/w/z</span> : go</li>
-  <li><span>down/s</span> : stop</li>
-  <li><span>c</span> : camera mode</li>
-  <li><span>escape</span> : quit</li>
-</ul>
-</div><!-- menuscreen -->
-
-    <span id="spd" title="go">0</span>
-
-    <div class="msgdiv"><pre id="botmsg"></pre></div>
-
-    <button id="accl" title="go" onclick="go()">go</button>
-
-    <button id="cambut" title="camera mode" onclick="camreset()"><span>c</span>amera [free]</button>
+        <ul id="mkeys" style="display: none;">
+          <li><span>mouse</span> : hover to control</li>
+          <li><span>up/w/z</span> : go</li>
+          <li><span>down/s</span> : stop</li>
+          <li><span>c</span> : camera mode</li>
+          <li><span>escape</span> : quit</li>
+        </ul>
+      </div><!-- menuscreen -->
 
 
-    <script src="../js/three.min.js"></script>
-    <script src="../js/OrbitControls.min.js"></script>
-    <script src="../js/GLTFLoader.js"></script>
-    <script src="../js/tween.js"></script>
+      <div id="msgdiv"><pre id="botmsg"></pre></div>
 
-<script type="text/javascript">
-function clrscr() {
-document.getElementById('botmsg').innerHTML = '';
-document.getElementById('mkeys').style.display = 'none';
-document.getElementById('botmsg').classList = '';
-}
+      <span id="spd" title="go">0</span>
 
-function controlkeys() {
+      <button id="accl" title="go" onclick="go()">go</button>
+
+      <button id="cambut" title="camera mode" onclick="camreset()"><span>c</span>amera [free]</button>
+
+
+      <script src="../js/three.min.js"></script>
+      <script src="../js/OrbitControls.min.js"></script>
+      <script src="../js/GLTFLoader.js"></script>
+      <script src="../js/tween.js"></script>
+
+      <script type="text/javascript">
+      function clrscr() {
+        document.getElementById('botmsg').innerHTML = '';
+        document.getElementById('mkeys').style.display = 'none';
+        document.getElementById('botmsg').classList = '';
+        document.getElementById('bgoal').classList = '';
+        document.getElementById('bstory').classList = '';
+        document.getElementById('bcontrol').classList = '';
+      }
+
+      function controlkeys() {
+        clrscr();
+        writethis(
+          'mouse: control' +
+          "\n" +
+          'up/w/z: go' +
+          "\n" +
+          'down/s: stop' +
+          "\n" +
+          'c: camera' +
+          "\n" +
+          'esc: quit' );
+          document.getElementById('bcontrol').classList = 'on';
+      }
+
+      function mgoal() {
+        clrscr();
+        writethis('Reach 1000mph to warp speed');
+        document.getElementById('bgoal').classList = 'on';
+      }
+
+      function showstory() {
 clrscr();
-writethis(
-  'mouse: control' +
-  "\n" +
-  'up/w/z: go' +
-  "\n" +
-  'down/s: stop' +
-  "\n" +
-  'c: camera' +
-    "\n" +
-  'esc: quit' );
-}
-
-function mgoal() {
-clrscr();
-writethis('Reach 1000mph to warp speed');
-}
-
-function showstory() {
-// <p id="mstory">
-// Claus and G'Naike have 
-// Transport reality bending cargo at warp speed.
-// </p>Transport reality bending cargo at warp speed
-clrscr();
+document.getElementById('bstory').classList = 'on';
 document.getElementById('botmsg').classList = 'story';
 writethis(
   "Warning." +
@@ -114,13 +114,16 @@ writethis(
   "\n" +
   'Does not compute.' );
 
+
+// document.getElementById('botmsg').appendChild('<button>continue</button>' );
+
 }
 
 
 </script>
 
 
-    <script id="vertex-shader" type="x-shader/x-fragment">
+<script id="vertex-shader" type="x-shader/x-fragment">
 // source : https://codepen.io/ma77os/pen/WYwRmV
 
 vec3 mod289(vec3 x)
@@ -421,8 +424,8 @@ function go() {
 //keys [keypress]
 document.onkeydown = function(evt) {
   evt = evt || window.event;
-console.log(evt)
-  if (stopgame && evt.keyCode != 67) {return}
+// console.log(evt)
+if (stopgame && evt.keyCode != 67) {return}
 
 if (evt.keyCode == 38) { // up
   evt.preventDefault();
@@ -650,9 +653,9 @@ loader.load(filepath, function(gltf) {
     morphTargets: true
   });
   mesh.rotation.set(Math.PI / 2, 0, -Math.PI / 2);
-  // mesh.position.set(0, 1, 0);
-  mesh.scale.set(0.4, 0.4, 0.4);
-  mothership.add(mesh);
+// mesh.position.set(0, 1, 0);
+mesh.scale.set(0.4, 0.4, 0.4);
+mothership.add(mesh);
 
 // car -light
 var light = new THREE.PointLight( 0xffffff, 1, 0.9 );
@@ -703,8 +706,8 @@ scene.add( circle );
 // background update
 function bgupdate() {
   rocks.position.x += increment * 11;
-  // mountains texture speed
-  bgmesh.material.uniforms.time.value += increment*1.5;
+// mountains texture speed
+bgmesh.material.uniforms.time.value += increment*1.5;
 
 // rocks logic
 if (rocks.position.x > 5) {
@@ -749,9 +752,9 @@ bg();
 function bg() {
   var rockmaterial = new THREE.MeshLambertMaterial({
     color: 0xcccccc
-    // color: 0x5F5F5F
-    // , wireframe:true
-  });
+// color: 0x5F5F5F
+// , wireframe:true
+});
 
   rocks = new THREE.Mesh(new THREE.SphereGeometry( 0.2, 2, 1, 0, 3 ), rockmaterial);
   rocks.rotation.x = -Math.PI/2;
@@ -759,34 +762,34 @@ function bg() {
   rocks.name = 'rocks';
   track.add(rocks);
 
-  // mountain bg groundplane
-  var geometry = new THREE.PlaneBufferGeometry(50, 50, 50, 50);
+// mountain bg groundplane
+var geometry = new THREE.PlaneBufferGeometry(50, 50, 50, 50);
 
-  textureLoader = new THREE.TextureLoader();
+textureLoader = new THREE.TextureLoader();
 
-  var displaceBuffer = new Float32Array(geometry.attributes.position.count);
-  for (var i = 0; i < displaceBuffer.length; i++) {
-    displaceBuffer[i] = Math.random()*20;
-  }
-  geometry.addAttribute('vDisplace', new THREE.BufferAttribute(displaceBuffer, 1));
-  var customUniforms = THREE.UniformsUtils.merge([
-    THREE.ShaderLib.lambert.uniforms,
-    {
-      time: { type: "f", value: 3.0 },
-      cor: { type: "v3", value: new THREE.Vector3(0.0, 0.0, 1.0) } }]);
+var displaceBuffer = new Float32Array(geometry.attributes.position.count);
+for (var i = 0; i < displaceBuffer.length; i++) {
+  displaceBuffer[i] = Math.random()*20;
+}
+geometry.addAttribute('vDisplace', new THREE.BufferAttribute(displaceBuffer, 1));
+var customUniforms = THREE.UniformsUtils.merge([
+  THREE.ShaderLib.lambert.uniforms,
+  {
+    time: { type: "f", value: 3.0 },
+    cor: { type: "v3", value: new THREE.Vector3(0.0, 0.0, 1.0) } }]);
 
-  var material = new THREE.ShaderMaterial({
-    uniforms: customUniforms,
-    vertexShader: document.getElementById("vertex-shader").textContent,
-    fragmentShader: document.getElementById("fragment-shader").textContent,
-    lights: true
-  });
+var material = new THREE.ShaderMaterial({
+  uniforms: customUniforms,
+  vertexShader: document.getElementById("vertex-shader").textContent,
+  fragmentShader: document.getElementById("fragment-shader").textContent,
+  lights: true
+});
 
-  bgmesh = new THREE.Mesh(geometry, material);
-  bgmesh.rotation.set(-Math.PI/2,0,Math.PI/2);
-  bgmesh.position.set(0,-1.7,0);
-  bgmesh.scale.set(2,4,0.2);
-  scene.add(bgmesh);
+bgmesh = new THREE.Mesh(geometry, material);
+bgmesh.rotation.set(-Math.PI/2,0,Math.PI/2);
+bgmesh.position.set(0,-1.7,0);
+bgmesh.scale.set(2,4,0.2);
+scene.add(bgmesh);
 
 }//bg
 
@@ -798,40 +801,37 @@ function intro() {
     'guys.glb',
     function ( gltf ) {
       introscene.add( gltf.scene );
-    gltf.scene.scale.set(3, 3, 3);
-    gltf.scene.rotation.set(0,-Math.PI,0);
-    gltf.scene.position.set(3,0,-2);
-    // 2=car, 3=claus, 4=gnaike
-    console.log(gltf.scene)
-    // gltf.scene.children[4].geometry.center();
-
-  },
-  function ( xhr ) {
-    console.log( ( xhr.loaded / xhr.total * 100 ) + '% loaded' );
-  },
-  function ( error ) {
-    console.log( 'An error happened' );
-  }
-  );
+      gltf.scene.scale.set(3, 3, 3);
+      gltf.scene.rotation.set(0,-Math.PI,0);
+      gltf.scene.position.set(3,0,-2);
+// 2=car, 3=claus, 4=gnaike
+},
+function ( xhr ) {
+  console.log( ( xhr.loaded / xhr.total * 100 ) + '% loaded' );
+},
+function ( error ) {
+  console.log( 'An error happened' );
+}
+);
 
 // introscene rocks
-        for ( var i = 0; i < 19; i ++ ) {
-var material = new THREE.MeshLambertMaterial( {color: 0xff0000} );
-var geometry = new THREE.SphereGeometry( 0.1, 2, 1, 0, 3 );
-var mesh = new THREE.Mesh( geometry, material );
-          mesh.rotation.x = -Math.PI/2;
-          mesh.rotation.z = Math.PI*Math.random();
-          var sc = Math.random()*0.5;
-          console.log(sc)
-          mesh.scale.set(sc, sc, sc);
+for ( var i = 0; i < 19; i ++ ) {
+  var material = new THREE.MeshLambertMaterial( {color: 0xff0000} );
+  var geometry = new THREE.SphereGeometry( 0.1, 2, 1, 0, 3 );
+  var mesh = new THREE.Mesh( geometry, material );
+  mesh.rotation.x = -Math.PI/2;
+  mesh.rotation.z = Math.PI*Math.random();
+  var sc = Math.random()*0.5;
+  console.log(sc)
+  mesh.scale.set(sc, sc, sc);
 
-          mesh.position.x = ( Math.random() - 0.5 ) * 15;
-          mesh.position.z = ( Math.random() - 0.5 ) * 15;
-          mesh.updateMatrix();
-          mesh.matrixAutoUpdate = false;
-          introscene.add( mesh );
+  mesh.position.x = ( Math.random() - 0.5 ) * 15;
+  mesh.position.z = ( Math.random() - 0.5 ) * 15;
+  mesh.updateMatrix();
+  mesh.matrixAutoUpdate = false;
+  introscene.add( mesh );
 
-        }
+}
 
 // intro light
 // amblight.intensity = 2;
@@ -864,41 +864,41 @@ function gamestart() {
 
 
 // stop game
-  function gmstop() {
-    stopgame = true;
-    revcounter = 0;
-    document.getElementById('botmsg').style.display = 'block';
-    document.getElementById('botmsg').innerHTML = '';
-    if (source.length>0) {source.stop(0);}//stop audio
-    introscene.visible = true;
-    document.getElementById('startgame').innerHTML = '[start game]';
-    document.getElementById('spd').style.display = 'none';
-    document.getElementById('accl').style.display = 'none';
-    bgmesh.scale.x = 10;
-    mothership.visible = false;
-    selection.visible = false;
-    cursor.visible = false;
-    cplane.visible = false;
-    bggroup.visible = false;
-    track.visible = false;
-  }// game end
+function gmstop() {
+  stopgame = true;
+  revcounter = 0;
+  document.getElementById('botmsg').style.display = 'block';
+  document.getElementById('botmsg').innerHTML = '';
+if (typeof source !== 'undefined') {source.stop(0);}//stop audio
+introscene.visible = true;
+document.getElementById('startgame').innerHTML = '[start game]';
+document.getElementById('spd').style.display = 'none';
+document.getElementById('accl').style.display = 'none';
+bgmesh.scale.x = 10;
+mothership.visible = false;
+selection.visible = false;
+cursor.visible = false;
+cplane.visible = false;
+bggroup.visible = false;
+track.visible = false;
+}// game end
 
 
 // start game
-  function gmstart() {
-    stopgame = false;
-    introscene.visible = false;
-    document.getElementById('startgame').innerHTML = 'quit';
-    document.getElementById('spd').style.display = 'block';
-    document.getElementById('accl').style.display = 'block';
-    bgmesh.scale.x = 2;
-    mothership.visible = true;
-    selection.visible = true;
-    cursor.visible = true;
-    cplane.visible = true;
-    bggroup.visible = true;
-    track.visible = true;
-  }
+function gmstart() {
+  stopgame = false;
+  introscene.visible = false;
+  document.getElementById('startgame').innerHTML = 'quit';
+  document.getElementById('spd').style.display = 'block';
+  document.getElementById('accl').style.display = 'block';
+  bgmesh.scale.x = 2;
+  mothership.visible = true;
+  selection.visible = true;
+  cursor.visible = true;
+  cplane.visible = true;
+  bggroup.visible = true;
+  track.visible = true;
+}
 
 }// game start
 
@@ -1050,32 +1050,32 @@ function Starfield(size, width, height) {
   this.stars = [];
   this.obj = new THREE.Group();
   this.obj.name = "starfield";
-  // this.obj.visible = false;
-  this.obj.rotation.set(0, Math.PI / 2, 0);
-  this.obj.position.set(0, 6, 0);
-  this.size = size;
-  this.width = width;
-  this.height = height;
-  this.material = new THREE.MeshBasicMaterial({
-    color: 0xffffff
-  });
-  this.init = function() {
-    for (var i = 0; i < this.size; i++) {
-      this.stars.push(new Star(this.material, randomFloat(-this.width, this.width), randomFloat(-this.width, this.width), randomFloat(0.1, 3)));
-      this.obj.add(this.stars[i].obj);
-    }
-    bggroup.add(this.obj);
+// this.obj.visible = false;
+this.obj.rotation.set(0, Math.PI / 2, 0);
+this.obj.position.set(0, 6, 0);
+this.size = size;
+this.width = width;
+this.height = height;
+this.material = new THREE.MeshBasicMaterial({
+  color: 0xffffff
+});
+this.init = function() {
+  for (var i = 0; i < this.size; i++) {
+    this.stars.push(new Star(this.material, randomFloat(-this.width, this.width), randomFloat(-this.width, this.width), randomFloat(0.1, 3)));
+    this.obj.add(this.stars[i].obj);
   }
-  this.init();
-  this.update = function() {
-    // if (!slowdown) {
-      for (var i = 0; i < this.size; i++) {
-        if (this.stars[i].obj.position.z > 5) {
-          this.stars[i].refresh(randomFloat(-this.width, this.width), randomFloat(-this.width, this.width));
-        }
+  bggroup.add(this.obj);
+}
+this.init();
+this.update = function() {
+// if (!slowdown) {
+  for (var i = 0; i < this.size; i++) {
+    if (this.stars[i].obj.position.z > 5) {
+      this.stars[i].refresh(randomFloat(-this.width, this.width), randomFloat(-this.width, this.width));
+    }
 
-        this.stars[i].obj.scale.z = revcounter/500;
-        this.stars[i].obj.position.z += revcounter/500;
+    this.stars[i].obj.scale.z = revcounter/500;
+    this.stars[i].obj.position.z += revcounter/500;
 // }
 
 } //if not slowdown
@@ -1100,27 +1100,27 @@ var animate = function () {
     bgupdate();
     stars.update();
     if (revcounter>0.1) {source.playbackRate.value = revcounter/200;
-        // engine fail
-        // if ( Math.random() > 0.9) { 
-        // revcounter += ( 1 - revcounter ) * 0.3; }  
-        // revcounter = revcounter;
-      }
-  }// if game paused
+// engine fail
+// if ( Math.random() > 0.9) { 
+// revcounter += ( 1 - revcounter ) * 0.3; }  
+// revcounter = revcounter;
+}
+}// if game paused
 
-  controls.update();
-  TWEEN.update();
-  camera.lookAt(0,0,0);
+controls.update();
+TWEEN.update();
+camera.lookAt(0,0,0);
 
 };// loop
 
 // START
 setTimeout(function() {
-stars = new Starfield(20, 9, 9);
+  stars = new Starfield(20, 9, 9);
   animate();
 
-setTimeout(function() {
-  camstart();
-   // writethis('argument');
+  setTimeout(function() {
+    camstart();
+// writethis('argument');
 }, 400);
 
 }, 200);
@@ -1145,13 +1145,13 @@ function typereset() {
 function typeWriter(ev) {
   if (ev == 'stop') {return}
 
-  if (k < botmsg.length) {
-    document.getElementById("botmsg").innerHTML += botmsg.charAt(k);
-    k++;
-    clicksnd();
-    setTimeout(typeWriter, tyspeed);
+    if (k < botmsg.length) {
+      document.getElementById("botmsg").innerHTML += botmsg.charAt(k);
+      k++;
+      clicksnd();
+      setTimeout(typeWriter, tyspeed);
+    }
   }
-}
 
 // clear title
 function clrbotmsg(){
@@ -1164,10 +1164,9 @@ function clrbotmsg(){
 
 // speak and write this
 function writethis(argument){
-  botmsg = argument;
-  // speakMsg(botmsg);
-  typereset();
-  typeWriter();
+botmsg = argument;
+typereset();
+typeWriter();
 }
 
 
